--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
             <div id="map"></div>
         </div>
     </div>
+
+    <div class="pop-div">
+        pop up
+      
+    </div>
+
 </body>
 <script src="/script.js" defer></script>
 <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
